--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@inrupt/solid-client": "^1.11.0",
+    "@inrupt/solid-client-authn-browser": "^1.11.0",
+    "@inrupt/vocab-common-rdf": "^1.0.0",
     "@material-ui/core": "^4.11.2",
+    "@solid/react": "^1.10.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
