--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "nanoid": "^3.1.25",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.2.0",
