--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,13 @@ jobs:
   deploy:
     docker:
       - image: cimg/node:15.5.1-browsers
-    working_directory: ~/solid-budget
+    working_directory: ~/solid-kitchen
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints:
             - "91:33:c2:6a:f1:f6:fd:18:c3:95:72:b4:67:5e:6d:9e"
       - run: npm i
-      - run: npm i surge
       - run: npm run build
       - run: rm -rf .git
       - run: echo "https://kitchen.wkgreen.dev" > ./build/CNAME
