--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "solid-core": "github:kjintroverted/solid-core",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
