--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solid-movies",
+  "name": "solid-kitchen",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +7,9 @@
     "@inrupt/solid-client-authn-browser": "^1.11.0",
     "@inrupt/vocab-common-rdf": "^1.0.0",
     "@material-ui/core": "^4.11.2",
-    "@solid/react": "^1.10.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "nanoid": "^3.1.25",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.2.0",
